fix some formatting issues

--- a/doc/mumpot.1
+++ b/doc/mumpot.1
@@ -13,7 +13,8 @@ mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- manual page for mumpot (mu
 .SH DESCRIPTION
 OSM map viewing, routing and simple editing program
 .PP
-.B mumpot-tah, mumpot-mapnik, mumpot-cyclemp
+.B mumpot-tah,
+.B mumpot-mapnik, mumpot-cyclemp
 are wrappers around 
 .B mumpot
 which
