--- a/doc/mumpot.1
+++ b/doc/mumpot.1
@@ -1,6 +1,6 @@
 .TH mumpot "1" "November 2008" "mumpot (mumpot 0.3.2)" "User Commands"
 .SH NAME
-mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- manual page for mumpot (mumpot 0.3.2)
+mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- OSM map viewing, routing and editing program (mumpot 0.3.2)
 .SH SYNOPSIS
 .B mumpot
 \fIconfigfile\fR
@@ -11,7 +11,7 @@ mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- manual page for mumpot (mu
 .br
 .B mumpot-cyclemap
 .SH DESCRIPTION
-OSM map viewing, routing and simple editing program
+Mumpot is an OSM map viewing, routing and editing program
 .PP
 .B mumpot-tah,
 .B mumpot-mapnik, mumpot-cyclemp
@@ -24,6 +24,8 @@ the command line,
 mumpot searches in 
 .B ~/.mumpot/map.conf
 .br
+If that file does not exists, a map selection dialog pops up
+on startup.
 One of these wrappers can be copied there and possibly, the line containing
 .B filepattern
 can be adjusted if the default storage locations for the tile cache
