update mumpot manfile

--- a/doc/mumpot.1
+++ b/doc/mumpot.1
@@ -1,9 +1,10 @@
-.TH mumpot "21" "April 2009" "mumpot (mumpot 0.5)" "User Commands"
+.TH mumpot "06" "April 2010" "mumpot (mumpot 0.6)" "User Commands"
 .SH NAME
-mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- OSM map viewing, routing and editing program (mumpot 0.5)
+mumpot, mumpot-tah, mumpot-mapnik. mumpot-cyclemap \- OSM map viewing, routing and editing program (mumpot 0.6)
 .SH SYNOPSIS
 .B mumpot
 \fIconfigfile\fR
+[gpxfile | osmfile ... ]
 .br
 .B mumpot-tah
 .br
